--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: Thalia "Lizzy" Nieto</title>
+    </head>
+    <body>
+        <h1>Thalia "Lizzy" Nieto</h1>
+        <p>This page is for CSCE 190</p>
+    </body>
+</html>
