--- a/index.html
+++ b/index.html
@@ -6,5 +6,19 @@
     <body>
         <h1>Thalia "Lizzy" Nieto</h1>
         <p>This page is for CSCE 190</p>
+            <div class="about">
+                <h2>About me</h2>
+                <p>My goal is to use my coding skills to create code and software and be able to successfully 
+debug it using my problem-solving skills.</p>
+            </div>
+            <div class="skills">
+                <h2>Skills</h2>
+            </div>
+            <div class="projects">
+                <h2>Highlighted projects</h2>
+            </div>
+            <div class="contact">
+            <h2>Contact Me</h2>
+            </div>
     </body>
 </html>
