--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@ debug it using my problem-solving skills.</p>
             </div>
             <div class="projects">
                 <h2>Highlighted projects</h2>
+                <!-- Problem Statement Assignment -->
+                <section class="project">
+                <a href="files/Problem Statement.pdf">
+                    <h3>Problem Statement</h3>
+                </a>
+                <a href="files/Problem Statement.pdf">
+                    <img src="images/Screenshot(26).png">
+                </a>
+                <p>Students using campus shuttles need a simpler way to track routes and arrival times to reduce anxiety and stress and increase punctuality. </p>
+                </section>
             </div>
             <div class="contact">
             <h2>Contact Me</h2>
