--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ debug it using my problem-solving skills.</p>
                 <h2>Highlighted projects</h2>
                 <!-- Problem Statement Assignment -->
                 <section class="project">
-                <a href="files/Problem_Statement.pdf">
+                <a href="files/p-statement.pdf">
                     <h3>Problem Statement</h3>
                 </a>
-                <a href="files/Problem_Statement.pdf">
-                    <img src="images/Problem_Statement.png">
+                <a href="files/p-statement.pdf">
+                    <img src="images/p-statement.png">
                 </a>
                 <p>Students using campus shuttles need a simpler way to track routes and arrival times to reduce anxiety and stress and increase punctuality. </p>
                 </section>
