--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@ debug it using my problem-solving skills.</p>
                 </a>
                 <p>Students using campus shuttles need a simpler way to track routes and arrival times to reduce anxiety and stress and increase punctuality. </p>
                 </section>
+                <!--Affinity Diagram Assignment -->
+                <section class="project">
+                <a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
+                <a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png"></a>
+                <p>
+                Text describing the diagram
+                </p>
+                </section>
             </div>
             <div class="contact">
             <h2>Contact Me</h2>
